Updated employee data'

--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,14 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
 	<types>
-		<members>*</members>
-		<name>ApexClass</name>
-	</types>
-	<types>
-		<members>*</members>
-		<name>AuraDefinitionBundle</name>
-	</types>
-	<types>
 		<members>Account</members>
 		<members>AccountBrand</members>
 		<members>AccountContactRole</members>
@@ -55,6 +47,7 @@
 		<members>DuplicateRecordItem</members>
 		<members>DuplicateRecordSet</members>
 		<members>EmailMessage</members>
+		<members>Employee__c</members>
 		<members>EngagementChannelType</members>
 		<members>Entitlement</members>
 		<members>EntitlementContact</members>
@@ -122,26 +115,6 @@
 		<members>WorkOrder</members>
 		<members>WorkOrderLineItem</members>
 		<name>CustomObject</name>
-	</types>
-	<types>
-		<members>*</members>
-		<name>CustomTab</name>
-	</types>
-	<types>
-		<members>*</members>
-		<name>FlexiPage</name>
-	</types>
-	<types>
-		<members>*</members>
-		<name>Layout</name>
-	</types>
-	<types>
-		<members>*</members>
-		<name>LightningComponentBundle</name>
-	</types>
-	<types>
-		<members>*</members>
-		<name>PermissionSet</name>
 	</types>
 	<version>60.0</version>
 </Package>
