--- a/.github/workflows/Sf-Deploy.yml
+++ b/.github/workflows/Sf-Deploy.yml
@@ -2,7 +2,7 @@ name: Build and Deploy Salesforce Elements to Org #Author: nbhaumik/Jul-2024
 on:
   push:
     branches: [ Dev, QA, UAT, main ]
-    workflow_dispatch:
+  workflow_dispatch:
 
 jobs:
   DEV-deploy:
@@ -15,7 +15,8 @@ jobs:
 
       - name: Setup Node.js
         uses: actions/setup-node@v1
-        with: node-version: 18
+        with: 
+          node-version: 18
 
       - name: Install SFDX CLI
         run: npm install sfdx-cli --global
