--- a/.github/workflows/Sf-Deploy.yml
+++ b/.github/workflows/Sf-Deploy.yml
@@ -2,7 +2,7 @@ name: Build and Deploy Salesforce Elements to Org #Author: nbhaumik/Jul-2024
 on:
   push:
     branches: [ Dev, QA, UAT, main ]
-    workflow_dispatch:
+  workflow_dispatch:
 
 jobs:
   DEV-deploy:
@@ -15,13 +15,14 @@ jobs:
 
       - name: Setup Node.js
         uses: actions/setup-node@v1
-        with: node-version: 18
+        with: 
+          node-version: 18
 
       - name: Install SFDX CLI
         run: npm install sfdx-cli --global
 
       - name: Authorize SF Org
-        run: sfdx force:auth:jwt:grant --clientid 3MVG9BriLgWNwNOSNV9MyNQCx8N.c0C.3cF4e1W.8coCajsuW6Eld1MrER8EehdcL0TdK9r4TPumRVKahHIHO --jwtkeyfile ./buildfiles/server.key --username vismaya.v@milestone.tech.main.dev --instanceurl https://milestone-main--dev.sandbox.my.salesforce.com -a Dev
+        run: sfdx force:auth:jwt:grant --clientid 3MVG9BriLgWNwNOSNV9MyNQCx8N.c0C.3cF4e1W.8coCajsuW6Eld1MrER8EehdcL0TdK9r4TPumRVKahHIHO --jwtkeyfile ./buildfiles/server.key --username vismaya.v@milestone.tech.main.dev --instanceurl https://login.salesforce.com/ -a Dev
 
       - name: Convert to Deploy Source
         run: sfdx force:source:convert -r ./force-app -d ./toDeploy
@@ -31,4 +32,3 @@ jobs:
 
       - name: Deploy to SF Org
         run: sfdx force:source:deploy -x manifest/package.xml -u Dev
-        
