--- a/.forceignore
+++ b/.forceignore
@@ -29,3 +29,6 @@ force-app/main/default/objects/Account/listViews/All.listView-meta.xml
 force-app/main/default/objects/Contact/listViews/All.listView-meta.xml
 Account.All.listView
 Contact.All.listView
+**/tsconfig.json
+
+**/*.ts
