--- a/.github/workflows/Sf-Deploy.yml
+++ b/.github/workflows/Sf-Deploy.yml
@@ -22,8 +22,9 @@ jobs:
         run: npm install sfdx-cli --global
 
       - name: Authorize SF Org
-        run: sfdx force:auth:jwt:grant --clientid ${{secrets.CLIENTID_Dev}} --jwtkeyfile ./buildfiles/server.key --username vismaya.v@milestone.tech.main.dev --instanceurl https://login.salesforce.com/ -a Dev
-
+        run: sfdx force:auth:jwt:grant --clientid ${{secrets.CLIENTID_Dev}} --jwtkeyfile ./buildfiles/server.key --username vismaya.v@milestone.tech.main.dev --instanceurl ${{vars.LOGIN_DEV}} -a Dev
+             |echo ${{vars.LOGIN_DEV}}
+             
       - name: Convert to Deploy Source
         run: sfdx force:source:convert -r ./force-app -d ./toDeploy
 
@@ -51,7 +52,7 @@ jobs:
 
       - name: Authorize SF Org
         run: |
-          sfdx force:auth:jwt:grant --clientid ${{secrets.CLIENTID_INT}} --jwtkeyfile ./buildfiles/server.key --username vismaya.v@milestone.tech.main.qa --instanceurl https://milestone-main--qa.sandbox.my.salesforce.com -a QA
+          sfdx force:auth:jwt:grant --clientid ${{secrets.CLIENTID_INT}} --jwtkeyfile ./buildfiles/server.key --username vismaya.v@milestone.tech.main.qa --instanceurl ${{vars.LOGIN_QA}} -a QA
 
       - name: Convert to Deploy Source
         run: sfdx force:source:convert -r ./force-app -d ./toDeploy
@@ -80,7 +81,7 @@ jobs:
 
       - name: Authorize SF Org
         run: |
-          sfdx force:auth:jwt:grant --clientid ${{secrets.CLIENTID_UAT}} --jwtkeyfile ./buildfiles/server.key --username vismaya.v@milestone.tech.main.uat --instanceurl https://milestone-main--uat.sandbox.my.salesforce.com -a UAT
+          sfdx force:auth:jwt:grant --clientid ${{secrets.CLIENTID_UAT}} --jwtkeyfile ./buildfiles/server.key --username vismaya.v@milestone.tech.main.uat --instanceurl ${{vars.LOGIN_UAT}} -a UAT
 
       - name: Convert to Deploy Source
         run: sfdx force:source:convert -r ./force-app -d ./toDeploy
@@ -109,7 +110,7 @@ jobs:
 
       - name: Authorize SF Org
         run: |
-          sfdx force:auth:jwt:grant --clientid ${{secrets.CLIENTID_Main}} --jwtkeyfile ./buildfiles/server.key --username selva.kumar@milestone.tech.main --instanceurl https://milestone-main.my.salesforce.com -a main
+          sfdx force:auth:jwt:grant --clientid ${{secrets.CLIENTID_Main}} --jwtkeyfile ./buildfiles/server.key --username selva.kumar@milestone.tech.main --instanceurl ${{vars.LOGIN_Main}} -a main
 
       - name: Convert to Deploy Source
         run: sfdx force:source:convert -r ./force-app -d ./toDeploy
